FullSb1-27-apr-15/src/objects/Alumnus__c.object
<CustomObject>
    <fields>
        <fullName>Age_from_Birthdate__c</fullName>
        <formula>(TODAY()- Birthdate__c)/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age from Birthdate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alumni_Chapter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alumni Chapter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus_es__c</fullName>
        <label>Campus(es)</label>
        <picklist>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Careers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Careers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Leader_End_Date__c</fullName>
        <label>Chapter Leader End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chapter_Leader_Start_Date__c</fullName>
        <label>Chapter Leader Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chapter_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chapter Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <label>Country of Citizenship</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas, The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <label>Country of Residence</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Degree_s__c</fullName>
        <label>Degree(s)</label>
        <picklist>
            <picklistValues>
                <fullName>AA BUSINESS ADMINISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA GENERAL STUDIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA STUDIO ARTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS BUSINESS ADMINISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA ART HISTORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA COMMUNICATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA EUROPEAN STUDIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA FINE ARTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA GENERAL STUDIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA HUMANITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA INTERNATIONAL RELATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA STUDIO ART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS BUSINESS ADMINISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS BUSINESS MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS COMPUTER INFORMATION SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS ECONOMICS &amp; FINANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS INTERNATIONAL BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS INTERNATIONAL MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS MARKETING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA FINANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA MARKETING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASTER IN INTERNATIONAL RELATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASTER OF DIGITAL MARKETING</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Electives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electives?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <label>Email 1</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fairs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fairs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Graduation_Year_s__c</fullName>
        <label>Graduation Year(s)</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Green_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Green Option?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hult_Email_Address__c</fullName>
        <inlineHelpText>Hult Alumni Email Address</inlineHelpText>
        <label>Hult Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>ADVERTISING, GRAPHIC DESIGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGRICULTURE, FARMING ,FISHERY, RANCHING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIRLINES, AVIATION , AEROSPACE, AIRCRAFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTS, PERFORMING ARTS, CRAFTS, FINE ART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANKING, INVESTMENT BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROADCAST, MEDIA, MEDIA PRODUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPITAL MARKETS, HEDGE FUNDS, PENSION FUNDS, PRIVATE EQUITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEMICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COSMETICS, LUXURY GOODS, JEWELRY, APPAREL &amp; ACCESSORIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPUTER &amp; SOFTWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSUMER PRODUCTS AND CONSUMER SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDUCATION, E-LEARNING, PROFESSIONAL TRAINING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERTAINMENT, LEISURE, TRAVEL, GAMBLING, CASINOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXECUTIVE SEARCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL SERVICES, ACCOUNTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FILM, MOTION PICTURES, TV, ANIMATION, PHOTOGRAPHY, BROADCASTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOOD, RESTAURANTS, TOBACCO , WINE, SPIRITS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FREIGHT DELIVERY, CARGO HANDLING, POSTAL, WAREHOUSING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT ADMINISTRATION  &amp; GOVERNMENT RELATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEALTH CARE, MEDICAL PRACTICE, RESEARCH, BIOTECHNOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMPORT, EXPORT, INTERNATIONAL TRADE, DEVELOPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIVIDUAL, FAMILY SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEGAL SERVICES, JUDICIARY, LAW ENFORCEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING, PACKAGING AND CONTAINERS, PACKAGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARKET RESEARCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINING, MINERALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUSEUMS, INSTITUTIONS, LIBRARY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interview?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>ACCOUNTING / FINANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMINISTRATIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ART / DESIGN / CREATIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOMER SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDUCATION / TRAINING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENGINEERING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEALTH CARE / MEDICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMAN RESOURCES/PERSONNEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAW / LEGAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOGISTICS / SUPPLY CHAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANAGEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARKETING / ADVERTISING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUBLIC RELATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PURCHASES / PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QUALITY CONTROL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESEARCH AND DEVELOPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAFETY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALES / BUSINESS DEVELOPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECRETARIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUPPORT SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TECHNOLOGY / IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <label>Job Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <picklist>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS, THE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRUNEI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BULGARIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BURKINA FASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMBODIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMEROON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAYMAN ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_of__c</fullName>
        <label>Member of:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Networking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Networking?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Alumni?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <label>Other Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Own_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Own Company?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospectives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospectives?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUROPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATIN AMERICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US &amp; CANADA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reunions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reunions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speakers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speakers?</label>
        <type>Checkbox</type>
    </fields>
    <label>Alumnus</label>
    <listViews>
        <fullName>All</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Alumni_Name_View</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Graduation_Year_s__c</columns>
        <columns>Job_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Name__c</field>
            <operation>startsWith</operation>
            <value>s</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>contains</operation>
            <value>LATIN AMERICA</value>
        </filters>
        <label>Alumni Name View</label>
    </listViews>
    <nameField>
        <label>Alumni</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alumni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>